image correction digi effects

--- a/SSfMT/Code Examples/Synth Fun.html
+++ b/SSfMT/Code Examples/Synth Fun.html
@@ -19,7 +19,7 @@
 <div id='summary'>Software Systems for Music Technology</div>
 </div>
 <div class='subheader'>
-<div id='related'>See also: <a href="./../../SSfMT.html">Software Systems for Music Technology</a>, <a href="./../../SSfMT/Practicals/Scheduling and Patterns.html">Scheduling and Patterns</a>, <a href="./../../SSfMT/Practicals/Buses and Ndefs.html">Buses and Ndefs</a>, <a href="./../../SSfMT/Practicals/Interfacing">Interfacing</a>, <a href="./../../SSfMT/Code Examples/FX Fun.html">FX Fun</a></div>
+<div id='related'>See also: <a href="./../../SSfMT.html">Software Systems for Music Technology</a>, <a href="./../../SSfMT/Practicals/Scheduling and Patterns.html">Scheduling and Patterns</a>, <a href="./../../SSfMT/Practicals/Buses and Ndefs.html">Buses and Ndefs</a>, <a href="./../../SSfMT/Practicals/Interfacing.html">Interfacing</a>, <a href="./../../SSfMT/Code Examples/FX Fun.html">FX Fun</a></div>
 </div>
 <div id='toc'>
 <ul class='toc'><li class='toc1'><a href='#Some%20Synths%20for%20you!'>Some Synths for you!</a></li>
