changed dates for 2018

--- a/SSfMT.html
+++ b/SSfMT.html
@@ -28,9 +28,8 @@
 <ul class='toc'></ul><li class='toc2'><a href='#Formative%20Tasks'>Formative Tasks</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Study%20Guides'>Study Guides</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Code%20Examples'>Code Examples</a></li>
-<ul class='toc'></ul></ul><li class='toc1'><a href='#News'>News</a></li>
-<ul class='toc'><li class='toc2'><a href='#Links'>Links</a></li>
-<ul class='toc'></ul></ul></ul></div><h2><a class='anchor' name='Module'>Module</a></h2>
+<ul class='toc'></ul></ul><li class='toc1'><a href='#Links'>Links</a></li>
+<ul class='toc'></ul></ul></div><h2><a class='anchor' name='Module'>Module</a></h2>
 <h3><a class='anchor' name='Module%20Information'>Module Information</a></h3>
 <ul>
 <li><a href="./SSfMT/Handbook.html">Handbook</a><li><a href="./SSfMT/Handbook.html#Module%20Overview">Module Overview</a><li><a href="./SSfMT/Handbook.html#Assessment">Assessment</a><li><a href="./SSfMT/Handbook.html#Course%20Materials">Course Materials</a><li><a href="./SSfMT/Assignment Briefs.html">Assignment Briefs</a><li><a href="./SSfMT/moduleplan.htm">Module Plan</a></ul>
@@ -45,7 +44,7 @@
 
 <p><h3><a class='anchor' name='Formative%20Tasks'>Formative Tasks</a></h3>
 <ul>
-<li><a href="./SSfMT/Tasks/Task 1.html">Task 1</a> - Due 20/11<li><a href="./SSfMT/Tasks/Task 2.html">Task 2</a> - Due 1/12<li><a href="./SSfMT/Tasks/Task 3.html">Task 3</a> - Due 16/1<li><a href="./SSfMT/Tasks/Task 4.html">Task 4</a> - Due 19/1<li><a href="./SSfMT/Tasks/Task 5.html">Task 5</a> - Due 26/1<li><a href="./SSfMT/Tasks/Task 6.html">Task 6</a> - Due 2/2<li><a href="./SSfMT/Tasks/Task 7.html">Task 7</a> - Due 9/2<li><a href="./SSfMT/Tasks/Task 8.html">Task 8</a> - Due 16/2<li><a href="./SSfMT/Tasks/Task 9.html">Task 9</a> - Due 2/3</ul>
+<li><a href="./SSfMT/Tasks/Task 1.html">Task 1</a> - Due 19/11<li><a href="./SSfMT/Tasks/Task 2.html">Task 2</a> - Due 26/11<li><a href="./SSfMT/Tasks/Task 3.html">Task 3</a> - Due 16/1<li><a href="./SSfMT/Tasks/Task 4.html">Task 4</a> - Due 17/1<li><a href="./SSfMT/Tasks/Task 5.html">Task 5</a> - Due 31/1<li><a href="./SSfMT/Tasks/Task 6.html">Task 6</a> - Due 7/2<li><a href="./SSfMT/Tasks/Task 7.html">Task 7</a> - Due 13/2<li><a href="./SSfMT/Tasks/Task 8.html">Task 8</a> - Due 14/2<li><a href="./SSfMT/Tasks/Task 9.html">Task 9</a> - Due 7/3</ul>
 
 <p><h3><a class='anchor' name='Study%20Guides'>Study Guides</a></h3>
 <ul>
@@ -53,9 +52,7 @@
 <h3><a class='anchor' name='Code%20Examples'>Code Examples</a></h3>
 <ul>
 <li><a href="./SSfMT/Code Examples/Code for Fun.html">Code for Fun</a><li><a href="./SSfMT/Code Examples/MIDI Out Fun.html">MIDI Out Fun</a><li><a href="./SSfMT/Code Examples/MIDI File Fun.html">MIDI File Fun</a><li><a href="./SSfMT/Code Examples/Simple FX.html">Simple FX</a><li><a href="./SSfMT/Code Examples/Synth Fun.html">Synth Fun</a><li><a href="./SSfMT/Code Examples/MIDI Synthesiser.html">MIDI Synthesiser</a><li><a href="./SSfMT/Code Examples/Mixing Things.html">Mixing Things</a></ul>
-<h2><a class='anchor' name='News'>News</a></h2>
-
-<p><em>Software Systems for Music Technology</em> related news, announcements, events, concerts, talks, links, etc:<h3><a class='anchor' name='Links'>Links</a></h3>
+<h2><a class='anchor' name='Links'>Links</a></h2>
 <ul>
 <li><a href="https://www.mstrcyork.org/">Music, Science and Technology Research Cluster (mstrc)</a><li><a href="https://www.mstrcyork.org/technologies-for-musical-creativity/">Technologies for Musical Creativity Group (TMCG)</a><li><a href="https://algorave.com/">Algoraves</a><li><a href="https://yorkshiresoundwomen.wordpress.com/">Yorkshire Sound Women Network (YSWN)</a></ul>
 
