--- a/SSfMT/Code Examples/MIDI File Fun.html
+++ b/SSfMT/Code Examples/MIDI File Fun.html
@@ -19,7 +19,7 @@
 <div id='summary'>Software Systems for Music Technology</div>
 </div>
 <div class='subheader'>
-<div id='related'>See also: <a href="./../../SSfMT.html">Software Systems for Music Technology</a>, <a href="./../../SSfMT/Lectures/Programming Concepts 2.html">Programming Concepts 2</a>, <a href="./../../SSfMT/Code Examples/MIDI Fun.html">MIDI Out Fun</a></div>
+<div id='related'>See also: <a href="./../../SSfMT.html">Software Systems for Music Technology</a>, <a href="./../../SSfMT/Lectures/Programming Concepts 2.html">Programming Concepts 2</a>, <a href="./../../SSfMT/Code Examples/MIDI Fun.html">MIDI Fun</a></div>
 </div>
 <div id='toc'>
 <ul class='toc'><li class='toc1'><a href='#SimpleMIDIFile'>SimpleMIDIFile</a></li>
