--- a/SSfMT/Handbook.html
+++ b/SSfMT/Handbook.html
@@ -43,13 +43,13 @@
 <ul class='toc'></ul><li class='toc2'><a href='#VCV%20Rack%20and%20Modular%20Links'>VCV Rack and Modular Links</a></li>
 <ul class='toc'></ul></ul></ul></div><div class='image'><img src='emsplay.png'/><br><b>EMS Studio in London</b></div>
 <dl>
-<dt>BA(Hons) Music and Sound Recording<dt>Department of Music<dt>University of York<dt>2017-2018<dd></dl>
+<dt>BA(Hons) Music and Sound Recording<dt>Department of Music<dt>University of York<dt>2018-2019<dd></dl>
 <h2><a class='anchor' name='Module%20Outline'>Module Outline</a></h2>
 <ul>
 <li><strong>Module</strong>: Software Systems for Music Technology<li><strong>Module Credits</strong>: 20<li><strong>Module Leader</strong>:<ul>
-<li><strong>Name</strong>:<a href="https://www.york.ac.uk/music/staff/academic/federico-reuben/">Dr Federico Reuben</a><li><strong>Email</strong>: federico.reuben@york.ac.uk<li><strong>Telephone</strong>: (01904) 32 4132<li><strong>Office</strong>: MRC/002</ul>
+<li><strong>Name</strong>: Lynette Quek<li><strong>Email</strong>: lwq501@york.ac.uk</ul>
 
-<p><li><strong>Dates</strong>: November 11 2017 - March 26 2018<li><strong>Spaces</strong>: MRC Teaching Room<li><strong>Formative Assessment</strong>: Seminar presentation (week 10 autumn term)<li><strong>Summative Assessment</strong>: Software and Technical Report (week 1 summer term) and Seminar/Showcase (week 2 summer term)<li><strong>Contact Time</strong>: 30 hours (lectures, practicals and seminars).<li><strong>Module Feedback</strong>: Written feedback within 6 weeks of hand-in.</ul>
+<p><li><strong>Dates</strong>: November 5 2018 - April 26 2019<li><strong>Spaces</strong>: MRC Teaching Room<li><strong>Formative Assessment</strong>: Seminar presentation (week 10 autumn term)<li><strong>Summative Assessment</strong>: Software and Technical Report (week 1 summer term) and Seminar/Showcase (week 2 summer term)<li><strong>Contact Time</strong>: 30 hours (lectures, practicals and seminars).<li><strong>Module Feedback</strong>: Written feedback within 4 weeks of hand-in.</ul>
 <h2><a class='anchor' name='Module%20Overview'>Module Overview</a></h2>
 <h3><a class='anchor' name='Module%20Description'>Module Description</a></h3>
 
@@ -88,10 +88,10 @@
 <p>The assessment criteria specific to this module will be considered and used as a measure to determine your achievement in the summative assessment process at the end of the module. <em>Lectures</em> will provide the opportunity to gain new knowledge in electronic and computer music, programming and creative applications of technology. <em>Practicals</em> will give you hands-on experience in synthesis, coding and digital audio technologies and the opportunity to creatively experiment with computers. <em>Formative assessment</em> and <em>tasks</em> will guide you through the learning process, ensuring you have the necessary knowledge and skills to complete the summative assessments. <em>Summative assessments</em> will be used to evaluate your performance in relation to module and programme outcomes. The <em>software system</em> (submitted as computer code) will provide the opportunity to demonstrate technical and creative skills and your involvement with technically challenging problems, creative processes and research activities. The <em>technical report</em> provides you with an opportunity to demonstrate your level of knowledge and understanding of relevant technical and musical concepts, debates and contexts and to present this information clearly. The <em>presentation/performance</em> will allow you to demonstrate the software system in practice and within a musical context.<h3><a class='anchor' name='Assessment%20Deadlines'>Assessment Deadlines</a></h3>
 
 <p><strong>Formative Assessment</strong>:<ul>
-<li><strong>Seminar Presentation</strong>: Friday, 1 December 2017, from 9:30-13:15 (in-class)</ul>
+<li><strong>Seminar Presentation</strong>: Friday, 26 November 2018, from 9:15-13:15 (in-class)</ul>
 
 <p><strong>Summative Assessment</strong>:<ul>
-<li><strong>Software (50%)</strong>: Monday, 16 April 2018 before 16:00.<li><strong>Technical Report (40%)</strong>: Monday, 16 April 2018 before 16:00.<li><strong>Presentation / Performance (10%)</strong>: Thursday 26 April 2018, event from 13:15-17:15.</ul>
+<li><strong>Software (50%)</strong>: Monday, 15 April 2019 before 16:00.<li><strong>Technical Report (40%)</strong>: Monday, 15 April 2019 before 16:00.<li><strong>Presentation / Performance (10%)</strong>: Friday, 26 April 2019, event from 9:15-13:15.</ul>
 <h3><a class='anchor' name='What%20to%20hand%20in'>What to hand in</a></h3>
 
 <p>Hand in two copies of the work to be assessed on or before the due date. This will include two printed copies of the technical report and two USB drives with the Software System (code and supporting materials) and a PDF of the technical report. Whatever form your assessment takes, you must pay attention to all aspects of presentation, including the material appearance of your work.
