--- a/SSfMT/moduleplan.htm
+++ b/SSfMT/moduleplan.htm
@@ -7,7 +7,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <meta name=ProgId content=Excel.Sheet>
 <meta name=Generator content="Microsoft Excel 15">
 <link rel=File-List href="moduleplan.fld/filelist.xml">
-<style id="moduleplan_22317_Styles">
+<style id="moduleplan_9668_Styles">
 <!--table
 	{mso-displayed-decimal-separator:"\.";
 	mso-displayed-thousand-separator:"\,";}
@@ -501,7 +501,7 @@ tags will be replaced.-->
 <!--START OF OUTPUT FROM EXCEL PUBLISH AS WEB PAGE WIZARD -->
 <!----------------------------->
 
-<div id="moduleplan_22317" align=center x:publishsource="Excel">
+<div id="moduleplan_9668" align=center x:publishsource="Excel">
 
 <table border=0 cellpadding=0 cellspacing=0 width=1332 style='border-collapse:
  collapse;table-layout:fixed;width:996pt'>
@@ -602,9 +602,9 @@ tags will be replaced.-->
   <td class=xl88 width=111 style='width:83pt'>Digital Synthesis<span
   style='mso-spacerun:yes'>  </span></td>
   <td class=xl110 width=111 style='width:83pt'>Programming Concepts 2</td>
-  <td class=xl110 width=111 style='width:83pt'>Digital Effects</td>
-  <td class=xl110 width=111 style='width:83pt'>Human Computer Interaction (HCI)</td>
-  <td class=xl111 width=111 style='width:83pt'>System integration and testing</td>
+  <td class=xl88 width=111 style='width:83pt'>Digital Effects</td>
+  <td class=xl88 width=111 style='width:83pt'>Human Computer Interaction (HCI)</td>
+  <td class=xl111 width=111 style='width:83pt'>Organising your Code</td>
   <td class=xl89 width=111 style='width:83pt'>Software (50%) and Technical
   Report (40%)</td>
   <td class=xl90 width=111 style='width:83pt'>Seminar/ Showcase (10%)</td>
