online submission info

--- a/SSfMT/Handbook.html
+++ b/SSfMT/Handbook.html
@@ -35,7 +35,7 @@
 <ul class='toc'><li class='toc2'><a href='#Assessment%20Methods'>Assessment Methods</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Assessment%20Strategy'>Assessment Strategy</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Assessment%20Deadlines'>Assessment Deadlines</a></li>
-<ul class='toc'></ul><li class='toc2'><a href='#What%20to%20hand%20in'>What to hand in</a></li>
+<ul class='toc'></ul><li class='toc2'><a href='#Submission'>Submission</a></li>
 <ul class='toc'></ul></ul><li class='toc1'><a href='#Course%20Materials'>Course Materials</a></li>
 <ul class='toc'><li class='toc2'><a href='#Resources'>Resources</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Reading'>Reading</a></li>
@@ -92,18 +92,14 @@
 
 <p><strong>Summative Assessment</strong>:<ul>
 <li><strong>Software (50%)</strong>: Monday, 15 April 2019 before 16:00.<li><strong>Technical Report (40%)</strong>: Monday, 15 April 2019 before 16:00.<li><strong>Presentation / Performance (10%)</strong>: Friday, 26 April 2019, event from 9:15-13:15.</ul>
-<h3><a class='anchor' name='What%20to%20hand%20in'>What to hand in</a></h3>
+<h3><a class='anchor' name='Submission'>Submission</a></h3>
 
-<p>Hand in two copies of the work to be assessed on or before the due date. This will include two printed copies of the technical report and two USB drives with the Software System (code and supporting materials) and a PDF of the technical report. Whatever form your assessment takes, you must pay attention to all aspects of presentation, including the material appearance of your work.
-<p>Each copy of your work must be in a separate cardboard wallet folder. Mark the folders on the front top right-hand corner. One folder must be marked with:<ul>
-<li>your name<li>your Exam Number – Y + 7-digits<li>the title of the module<li>the date</ul>
-
-<p>Mark your other folder with:<ul>
-<li>your exam number but not your name<li>the module title<li>the date</ul>
-
-<p>You leave off your name because you remain anonymous to the second marker. One folder goes to the module tutor who marks it and then gives it back. The other copy goes to the second marker and is retained for the final examination board in June of your 3rd year. We require two copies of 1st year work. CDs should be in a sleeve and similarly marked for identification. Materials must be presented to professional standards. All work must be clearly and carefully presented and labelled (your exam number must appear on every page). All essays, commentaries and technical reports must be word-processed. In addition, they must be:<ul>
-<li>double spaced<li>on A4 paper (printed on either one side or double-sided)</ul>
-<h2><a class='anchor' name='Course%20Materials'>Course Materials</a></h2>
+<p>You will submit your work through our online submission system via the <a href="https://dropoff.york.ac.uk">DropOff Service</a>. This will include all of the files for the Software System (code and supporting materials) and PDF files containing the technical report. Whatever form your assessment takes, you must pay attention to all aspects of presentation, including the material appearance of your work.
+<p>All of your submitted work should be named in the following format:
+<p><strong>Folder name: ExamNumber_ModuleTitle File name: ExamNumber_ModuleTitle_AssessmentType</strong>
+<p>So, for example, your file name might look like: <strong>Y1234567_SoftwareSystemsForMusicTechnology</strong>.
+<p>To use the DropOff service, you need to submit all your work (even if it is just one file) as a zipped folder. You must create this before using the DropOff service.
+<p>For a detailed explanation of how to submit your work please download the <a href="https://www.york.ac.uk/media/music/documents/handbooks/Music%20Department%20Guide%20to%20Assessment%20Submission.pdf">Music Department Guide to Assessment Submission</a>.<h2><a class='anchor' name='Course%20Materials'>Course Materials</a></h2>
 <h3><a class='anchor' name='Resources'>Resources</a></h3>
 
 <p><strong>Library</strong>: You will be expected to research and write a technical report for this module and this will require finding academic sources (books, journals, etc.) at the library. Online library resources: The library provides a series of online resources that you can access through the library website. You can reach the website by following this <a href="http://www.york.ac.uk/library/">link</a>.
