small fixes to online submission information

--- a/SSfMT/Handbook.html
+++ b/SSfMT/Handbook.html
@@ -98,8 +98,8 @@
 <p>All of your submitted work should be named in the following format:
 <p><strong>Folder name: ExamNumber_ModuleTitle File name: ExamNumber_ModuleTitle_AssessmentType</strong>
 <p>So, for example, your file name might look like: <strong>Y1234567_SoftwareSystemsForMusicTechnology</strong>.
-<p>To use the DropOff service, you need to submit all your work (even if it is just one file) as a zipped folder. You must create this before using the DropOff service.
-<p>For a detailed explanation of how to submit your work please download the <a href="https://www.york.ac.uk/media/music/documents/handbooks/Music%20Department%20Guide%20to%20Assessment%20Submission.pdf">Music Department Guide to Assessment Submission</a>.<h2><a class='anchor' name='Course%20Materials'>Course Materials</a></h2>
+<p>To use the DropOff service, you need to submit all your work as a zipped folder. You must create this before using the DropOff service.
+<p>For a detailed explanation of how to submit your work please read the <a href="https://www.york.ac.uk/media/music/documents/handbooks/Music%20Department%20Guide%20to%20Assessment%20Submission.pdf">Music Department Guide to Assessment Submission</a>.<h2><a class='anchor' name='Course%20Materials'>Course Materials</a></h2>
 <h3><a class='anchor' name='Resources'>Resources</a></h3>
 
 <p><strong>Library</strong>: You will be expected to research and write a technical report for this module and this will require finding academic sources (books, journals, etc.) at the library. Online library resources: The library provides a series of online resources that you can access through the library website. You can reach the website by following this <a href="http://www.york.ac.uk/library/">link</a>.
