--- a/SSfMT/Practicals/Programming Concepts 1.html
+++ b/SSfMT/Practicals/Programming Concepts 1.html
@@ -52,7 +52,7 @@
 <p>Therefore, with SC we have to be patient at the beginning! The learning curve might seem a bit steeper than learning other software, but as you will see: if your persevere it will pay off!
 <p>I will be looking at the Mac version of SuperCollider. There are slight variations (in shortcuts for example) in the SuperCollider version for Linux and Windows. They are not substantial though in the SuperCollider IDE.<h3><a class='anchor' name='SuperCollider%20IDE'>SuperCollider IDE</a></h3>
 
-<p><a href="./../../Guides/SCIde.html">The SuperCollider IDE</a> (Integrated Development Environment) is a cross-platform coding environment based on Qt (cross-platform software development tool).<h3><a class='anchor' name='Getting%20Help'>Getting Help</a></h3>
+<p><a href="http://doc.sccode.org/Guides/SCIde.html">The SuperCollider IDE</a> (Integrated Development Environment) is a cross-platform coding environment based on Qt (cross-platform software development tool).<h3><a class='anchor' name='Getting%20Help'>Getting Help</a></h3>
 
 <p>The most important thing in SC is where to find the help documentation. Of course, you can look in the Help in the Menu bar, but also it is helpful to know the shortcut to get your help files. In Mac you can do that with <em>cmd + d</em>. In Windows <em>ctrl</em> is used instead of <em>cmd</em>. Also if you select a Class that you want to search documentation for, you have to select the word and then press <em>cmd + d</em>.<div class='note'><span class='notelabel'>NOTE:</span> Useful Shortcut: <em>cmd + d</em></div>
 <p>Example:
