corrected small mistakes

--- a/SSfMT/Lectures/Computer Music.html
+++ b/SSfMT/Lectures/Computer Music.html
@@ -128,7 +128,7 @@
 <p><div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture4/Lecture4.031.png'/><br><b>M.C. Esher - Ascending and Descending</b></div>
 
 <p><pre class='code prettyprint lang-sc'>//Beck, Lonesome Tears, 2002
-"open https://youtu.be/mrTl5iUF6FY?t=3m15s".unixCmd;</pre>
+"open https://youtu.be/zWe6bMVvTzk?t=195".unixCmd;</pre>
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture4/Lecture4.032.png'/><br><b>Jean-Claude Rissett</b></div>
 
