--- a/SSfMT/Practicals/Programming Concepts 1.html
+++ b/SSfMT/Practicals/Programming Concepts 1.html
@@ -67,8 +67,9 @@
 <p><em>cmd + p</em> = Post Window to Front
 <p><em>shift + cmd + p</em> = Clear Post Window</div>
 <p>When it comes to running code or evaluating it, you have to select the code that you want to evaluate (or if all of the code is in one line, position the cursor in the line you want to evaluate) and then press cmd + return or shift + return<div class='note'><span class='notelabel'>NOTE:</span> Useful Shortcut: <em>cmd + return or shift + return</em> = Evaluate</div>
-<p>Run the code bellow by put the cursor in the line where the code is and then evaluate it:<pre class='code prettyprint lang-sc'>"I am a frog".speak</pre>
+<p>Run the code bellow by put the cursor in the line where the code is and then evaluate it several times:<pre class='code prettyprint lang-sc'>("I am a " ++ ["frog", "cat", "horse"].choose).postln</pre>
 
+<p>Look at the post window!
 <p>Now run this line:<pre class='code prettyprint lang-sc'>31+13</pre>
 
 <p>The answer is returned in the post window!
