corrections to symthesis and patterns

--- a/SSfMT/Lectures/Digital Synthesis.html
+++ b/SSfMT/Lectures/Digital Synthesis.html
@@ -543,7 +543,7 @@ a.play(args: [\freq, 880]);
 }.scope;
 )</pre>
 
-<p>Harmonic sidebands:<pre class='code prettyprint lang-sc'>{(SinOsc.ar(220,0,0.25)+SinOsc.ar(440,0,0.25))*SinOsc.ar(880)}.scope; C and M are within harmonic ratios</pre>
+<p>Harmonic sidebands:<pre class='code prettyprint lang-sc'>{(SinOsc.ar(220,0,0.25)+SinOsc.ar(440,0,0.25))*SinOsc.ar(880)}.scope; //C and M are within harmonic ratios</pre>
 
 <p>Inharmonic sidebands:<pre class='code prettyprint lang-sc'>{(SinOsc.ar(100,0,0.25)+SinOsc.ar(380,0,0.25))*SinOsc.ar(775)}.scope;</pre>
 <div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/guides/guide2/ring2.png'/><br><b>Sidebands in Ring Modulation</b></div>
